--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^9.0.1",
+    "github-calendar": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "typed.js": "^2.0.12",
     "typewriter-effect": "^2.19.0",
